Added swagger docs for getTODOS , updateTODOS and deleteTODOS
